--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Em busca do castelo abandonado</title>
 </head>
 <body>
  <main>
-<div>
-<p></p>
-
+<div class="passo" id="passo-0">
+<p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre um castelo abandonado, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa uma pista para encontrar esse castelo abandonado e eu decidi seguilas!</p>
+<button class="btn-proximo" data-proxima="1">frança</button>
+<button class="btn-proximo" data-proxima="2">áfrica</button>
 </div>
-
+<div class="passo" id="passo-0">
+    <p>Você começa sua jornada na França, e subindo no Vale do Loire ao amanhecer para encontra a primeira pista.</p>
+    <button class="btn-proximo" data-proxima="1">procurar a pista no Vale do loire</button>
+    <button class="btn-proximo" data-proxima="2">Desistir e volta para casa</button>
  </main>
     
 </body>
