--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn-proximo" data-proximo="2">áfrica</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada na França, e subindo no Vale do Loire ao amanhecer para encontra a primeira pistaVocê começa sua jornada na França, e subindo no Vale do Loire ao amanhecer para encontra a primeira pista.</p>
+            <p>Você começa sua jornada na França, e subindo no Vale do Loire ao amanhecer para encontra a primeira pistas.</p>
             <button class="btn-proximo" data-proximo="3">procurar a pista no Vale do loire</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
@@ -40,8 +40,8 @@
 
         <div class="passo" id="passo-5">
             <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+                pista está no França.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para a frança</button>
         </div>
 
         <div class="passo" id="passo-6">
@@ -56,18 +56,18 @@
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para a frança!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para A França</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
+            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada do
+                castelo abandonado.</p>
             <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
+            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais do castelo abandonado
                 aqui.</p>
             <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div>
